Тест отдельного фронта не рабочий 6